# mtg-printable-set-label-generator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: automerge.yml  release.yml  test.yml
mtglabels/: cache.py  config.py  generator.py
mtglabels/templates/: address_labels.svg.jinja  icon_code.svg.jinja  icon_name.svg.jinja  icon_name_code_date.svg.jinja  icon_only.svg.jinja  name_code_date_icon.svg.jinja
