[tool.poetry]
name = "mtglabels"
version = "0.0.20"
description = "Magic: the Gathering Printable Set Label Generator"
readme = "README.md"
authors = ["Evgenii Vasilenko <gmrnsk@gmail.com>"]
include = [
    "mtglabels/templates/*.svg",
    "mtglabels/templates/svg/*.svg"
]

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "==3.1.2"
requests = "==2.31.0"
cairosvg = "==2.7.1"
markupsafe = "==2.1.3"
pypdf2 = "==3.0.1"
urllib3 = "==2.1.0"

[tool.poetry.group.dev.dependencies]
black = "==23.12.1"

[tool.poetry.scripts]
mtglabels = "mtglabels.generator:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
