[tool.poetry]
name = "mtglabels"
version = "1.0.0"
description = "Magic: the Gathering Printable Set Label Generator"
readme = "README.md"
license = "MIT"
authors = ["Evgenii Vasilenko <gmrnsk@gmail.com>"]
maintainers = ["Evgenii Vasilenko <gmrnsk@gmail.com>"]
repository = "https://github.com/gofrolist/mtg-printable-set-label-generator"
include = [
    "mtglabels/templates/*.svg",
    "mtglabels/templates/svg/*.svg"
]

[tool.poetry.dependencies]
python = "^3.10"
cairosvg = "==2.8.2"
jinja2 = "==3.1.6"
markupsafe = "==3.0.2"
pypdf2 = "==3.0.1"
requests = "==2.32.3"
urllib3 = "==2.4.0"

[tool.poetry.group.dev.dependencies]
black = "==25.1.0"

[tool.poetry.scripts]
mtglabels = "mtglabels.generator:main"

[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
branch = "main"
version_toml = ["pyproject.toml:tool.poetry.version"]
commit_message = "chore(release): bump version to v{version} [skip ci]"

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    "^Merge pull request",
    "^Merge branch",
]
