[metadata]
name = mtglabels
version = 0.0.12


[options]
packages = mtglabels
include_package_data = True
install_requires =
    Jinja2>=3,<4
    requests>=2.30.0,<3
    CairoSVG>=2.7,<3
    markupsafe>=2.0.1
    PyPDF2==3.0.1


[options.entry_points]
console_scripts =
        mtglabels = mtglabels.generator:main
